data - clean up / start

--- a/app/js/data/app.json
+++ b/app/js/data/app.json
@@ -1,54 +1,21 @@
 {
-  "projectName": "Picking Technologies",
+  "projectName": "NZ Adventures",
   "intro": {
-    "callout": "Always keep learning.",
-    "expanded": "Whether it's cutting edge new technologies, or just new to me, there's always more to uncover in the world of web development."
+    "callout": "Who wants stuff?",
+    "expanded": "Because We're getting rid of most of it. This is a list of the things in our home that we're moving on. Friends and family get first pick before the great garage sale time."
   },
   "tags": [
-    "Animation",
-    "Abstraction",
-    "Automation",
-    "CMS",
-    "CSS",
-    "Framework",
-    "JavaScript",
-    "Library",
-    "Manager",
-    "Mobile",
-    "Node",
-    "PHP",
-    "Preprocessor",
-    "Ruby",
-    "Single Page",
-    "Templating",
-    "Testing"
-  ],
-  "letters": [
-    { "letter": "A" },
-    { "letter": "B" },
-    { "letter": "C" },
-    { "letter": "D" },
-    { "letter": "E" },
-    { "letter": "F" },
-    { "letter": "G" },
-    { "letter": "H" },
-    { "letter": "I" },
-    { "letter": "J" },
-    { "letter": "K" },
-    { "letter": "L" },
-    { "letter": "M" },
-    { "letter": "N" },
-    { "letter": "O", "disabled": true },
-    { "letter": "P" },
-    { "letter": "Q", "disabled": true },
-    { "letter": "R" },
-    { "letter": "S" },
-    { "letter": "T" },
-    { "letter": "U" },
-    { "letter": "V" },
-    { "letter": "W" },
-    { "letter": "X" },
-    { "letter": "Y" },
-    { "letter": "Z", "disabled": true }
+    "Furniture",
+    "Gardening",
+    "Tools",
+    "_seperator_1",
+    "Kitchen",
+    "Bathroom",
+    "Bedroom",
+    "Livingroom",
+    "_seperator_2",
+    "Like New",
+    "Gently Used",
+    "Well Loved"
   ]
 }
