--- a/app/js/data/app.json
+++ b/app/js/data/app.json
@@ -1,8 +1,8 @@
 {
   "projectName": "NZ Adventures",
   "intro": {
-    "callout": "Who wants stuff?",
-    "expanded": "Because We're getting rid of most of it. This is a list of the things in our home that we're moving on. Friends and family get first pick before the great garage sale time."
+    "callout": "Let Karah or Jade know things you're interested in!",
+    "expanded": "Because we want to get rid of all this stuff. Friends and family get first pick before the great garage sale time."
   },
   "tags": [
     "Furniture",
