--- a/app/js/data/app.json
+++ b/app/js/data/app.json
@@ -8,11 +8,13 @@
     "Furniture",
     "Gardening",
     "Tools",
+    "Lighting",
     "_seperator_1",
     "Kitchen",
     "Bathroom",
     "Bedroom",
     "Livingroom",
+    "Office",
     "_seperator_2",
     "Like New",
     "Gently Used",
