dist build (prod)

--- a/package.json
+++ b/package.json
@@ -42,11 +42,13 @@
     "webpack": "^2.4.1",
     "webpack-dev-middleware": "^1.10.2",
     "webpack-hot-middleware": "^2.18.0",
+    "webpack-merge": "^4.1.2",
     "webpack-module-hot-accept": "^1.0.5"
   },
   "main": "serve.js",
   "scripts": {
     "start": "node .",
+    "build": "webpack --config webpack.prod.js",
     "lint": "./node_modules/.bin/eslint -c .eslintrc.json --ext .js,.jsx app",
     "test": "jest"
   },
